<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Cadastro">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/lg_new_cad" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/cad_text_titulo"
            android:textColor="@color/colorLetraTitulo"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="0dp"
        android:layout_height="665dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="533dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_subtitulo_dp"
                android:textColor="@color/colorLetraTitulo"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_name"
                android:textColor="@color/colorLetraTitulo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="digite seu nome"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_sobrenome"
                android:textColor="@color/colorLetraTitulo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:id="@+id/sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="digite seu sobrenome"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/cad_text_cpf"
                    android:textColor="@color/colorLetraTitulo" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/cad_text_nasc"
                    android:textColor="@color/colorLetraTitulo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cpf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/dataNascimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonFem"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/cad_radioBt_fem"
                    android:textColor="@color/colorLetraTitulo" />

                <RadioButton
                    android:id="@+id/radioButtonMasc"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/cad_radioBt_mas"
                    android:textColor="@color/colorLetraTitulo" />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_subtitulo_cont"
                android:textColor="@color/colorLetraTitulo"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_tel"
                android:textColor="@color/colorLetraTitulo" />

            <EditText
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_email"
                android:textColor="@color/colorLetraTitulo" />

            <EditText
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_conf_email"
                android:textColor="@color/colorLetraTitulo" />

            <EditText
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_subtitulo_acesso"
                android:textColor="@color/colorLetraTitulo"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_senha"
                android:textColor="@color/colorLetraTitulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="520dp">

                <EditText
                    android:id="@+id/senha1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/cad_text_exibir"
                    android:textColor="@color/colorLetraTitulo" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/cad_text_conf_senha"
                android:textColor="@color/colorLetraTitulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/senha2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/cad_text_exibir"
                    android:textColor="@color/colorLetraTitulo" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/cad_text_info"
                android:textColor="@color/colorInfoText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center_vertical"
                android:text="@string/cad_text_checkbox_sms_email"
                android:textColor="@color/colorLetraTitulo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center_vertical"
                android:text="@string/cad_text_checkbox_contrato"
                android:textColor="@color/colorLetraTitulo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/pronto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_regular"
                android:onClick="CadastroUsuario"
                android:text="@string/cad_text_bt"
                android:background="@drawable/round_corner_button"
                android:textColor="@color/colorLetraBt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>