<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/lg_borala_branco" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center"
                android:text="@string/log_tex_titulo"
                android:textColor="@color/colorLetraTitulo"
                android:textSize="16dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorLetraTitulo"
            android:fontFamily="@font/nunito_regular"
            android:textSize="16dp"
            android:text="@string/log_tex_email" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetraTitulo"
            android:fontFamily="@font/nunito_regular"
            android:textSize="16dp"
            android:text="@string/log_tex_senha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/exibir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/log_tex_exibir"
                android:textSize="16dp"
                android:onClick="cliqueNotexto"
                android:clickable="true"
                android:textColor="@color/colorLetraTitulo" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_bt_entrar"
            android:textColor="@color/colorLetraBt"
            android:fontFamily="@font/nunito_regular"
            android:background="@color/colorButton"
            android:onClick="entrarSistema"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/esq_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorLetraTitulo"
            android:fontFamily="@font/nunito_regular"
            android:onClick="AbrirEsqSenha"
            android:clickable="true"
            android:text="@string/log_link_senha" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetraBt"

            android:textStyle="bold"
            android:background="@color/colorButton"
            android:onClick="AbrirCadastro"
            android:text="@string/log_bt_cadastrar" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>