<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DiaAtual"
    tools:showIn="@layout/app_bar_dia_atual">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/lg_borala_vetor_branco" />

                <TextView
                    android:id="@+id/textViewDia"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/diaatual_text_titulo"
                    android:textColor="@color/colorLetraTitulo"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <Switch
                android:id="@+id/Switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="left"
                android:paddingVertical="10dp"
                android:showText="true"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorLetraTitulo"
                android:text="@string/diaatual_text_perg"
                android:textOff="Sim"
                android:textOn="Não"
                android:textSize="17sp" />


            <CalendarView
                android:id="@+id/calendarView1"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_weight="1"
                android:paddingVertical="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/buttonTrajetos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorLetraBt"
                    android:text="@string/diaatual_text_bt_traj" />

                <Button
                    android:id="@+id/buttonMapas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorLetraBt"
                    android:text="@string/diaatual_text_bt_mps" />

                <Button
                    android:id="@+id/buttonRelatorio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorLetraBt"
                    android:text="@string/diaatual_text_bt_rel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/textViewCaroneiros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorLetraTitulo"
                    android:text="@string/diaatual_text_subtitulo"
                    android:textStyle="bold"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/button_adiciona_caroneiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorLetraBt"
                    android:textSize="15dp"
                    android:text="Adicionar Caroneiros" />
            </LinearLayout>

            <ListView
                android:id="@+id/ListaCaroneiros"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1" />
        </LinearLayout>


</android.support.constraint.ConstraintLayout>