<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".EsqueciSenha">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/lg_borala_vetor_branco" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/esq_text_titulo"
                android:textColor="@color/colorLetraTitulo"
                android:gravity="center_vertical"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/esq_text"
                android:textColor="@color/colorLetraTitulo"
                android:textSize="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/esq_text_cpf"
                android:textColor="@color/colorLetraTitulo" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/esq_bt_continuar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:text="@string/esq_bt_continuar"
                android:textColor="@color/colorLetraBt"
                android:onClick="retornoLogin"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>